<?xml version="1.0"?>
<package format="3">
  <name>robot_actions</name>
  <version>0.0.0</version>
  <description>Action server for charging robot battery</description>

  <maintainer email="ilyassilyass262004@gmail.com">ilyas</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>custom_interfaces</exec_depend>

  <!-- Needed for Python packages -->
  <build_depend>ament_cmake_python</build_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <!-- Testing (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
